--- a/EX11_DISPLAY_DATA_IN_GEOGRAPHICAL_PLOT/EX_11_DISPLAY_DATA_IN_GEOGRAPHICAL_MAP.ipynb
+++ b/EX11_DISPLAY_DATA_IN_GEOGRAPHICAL_PLOT/EX_11_DISPLAY_DATA_IN_GEOGRAPHICAL_MAP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "23a290e1",
+   "id": "1657eedf",
    "metadata": {},
    "source": [
     "## Plotting using GeoPandas"
@@ -10,21 +10,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a7cf0230",
+   "execution_count": 15,
+   "id": "fc1b424e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas\n",
-    "import matplotlib.pyplot as plt"
+    "import geopandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f1535c49",
+   "execution_count": 16,
+   "id": "8c365155",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pop_est</th>\n",
+       "      <th>continent</th>\n",
+       "      <th>name</th>\n",
+       "      <th>iso_a3</th>\n",
+       "      <th>gdp_md_est</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>889953.0</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Fiji</td>\n",
+       "      <td>FJI</td>\n",
+       "      <td>5496</td>\n",
+       "      <td>MULTIPOLYGON (((180.00000 -16.06713, 180.00000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>58005463.0</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Tanzania</td>\n",
+       "      <td>TZA</td>\n",
+       "      <td>63177</td>\n",
+       "      <td>POLYGON ((33.90371 -0.95000, 34.07262 -1.05982...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>603253.0</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>W. Sahara</td>\n",
+       "      <td>ESH</td>\n",
+       "      <td>907</td>\n",
+       "      <td>POLYGON ((-8.66559 27.65643, -8.66512 27.58948...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37589262.0</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>CAN</td>\n",
+       "      <td>1736425</td>\n",
+       "      <td>MULTIPOLYGON (((-122.84000 49.00000, -122.9742...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>328239523.0</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>21433226</td>\n",
+       "      <td>MULTIPOLYGON (((-122.84000 49.00000, -120.0000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>172</th>\n",
+       "      <td>6944975.0</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Serbia</td>\n",
+       "      <td>SRB</td>\n",
+       "      <td>51475</td>\n",
+       "      <td>POLYGON ((18.82982 45.90887, 18.82984 45.90888...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>622137.0</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Montenegro</td>\n",
+       "      <td>MNE</td>\n",
+       "      <td>5542</td>\n",
+       "      <td>POLYGON ((20.07070 42.58863, 19.80161 42.50009...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>1794248.0</td>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Kosovo</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>7926</td>\n",
+       "      <td>POLYGON ((20.59025 41.85541, 20.52295 42.21787...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>1394973.0</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>Trinidad and Tobago</td>\n",
+       "      <td>TTO</td>\n",
+       "      <td>24269</td>\n",
+       "      <td>POLYGON ((-61.68000 10.76000, -61.10500 10.890...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>11062113.0</td>\n",
+       "      <td>Africa</td>\n",
+       "      <td>S. Sudan</td>\n",
+       "      <td>SSD</td>\n",
+       "      <td>11998</td>\n",
+       "      <td>POLYGON ((30.83385 3.50917, 29.95350 4.17370, ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>177 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         pop_est      continent                      name iso_a3  gdp_md_est   \n",
+       "0       889953.0        Oceania                      Fiji    FJI        5496  \\\n",
+       "1     58005463.0         Africa                  Tanzania    TZA       63177   \n",
+       "2       603253.0         Africa                 W. Sahara    ESH         907   \n",
+       "3     37589262.0  North America                    Canada    CAN     1736425   \n",
+       "4    328239523.0  North America  United States of America    USA    21433226   \n",
+       "..           ...            ...                       ...    ...         ...   \n",
+       "172    6944975.0         Europe                    Serbia    SRB       51475   \n",
+       "173     622137.0         Europe                Montenegro    MNE        5542   \n",
+       "174    1794248.0         Europe                    Kosovo    -99        7926   \n",
+       "175    1394973.0  North America       Trinidad and Tobago    TTO       24269   \n",
+       "176   11062113.0         Africa                  S. Sudan    SSD       11998   \n",
+       "\n",
+       "                                              geometry  \n",
+       "0    MULTIPOLYGON (((180.00000 -16.06713, 180.00000...  \n",
+       "1    POLYGON ((33.90371 -0.95000, 34.07262 -1.05982...  \n",
+       "2    POLYGON ((-8.66559 27.65643, -8.66512 27.58948...  \n",
+       "3    MULTIPOLYGON (((-122.84000 49.00000, -122.9742...  \n",
+       "4    MULTIPOLYGON (((-122.84000 49.00000, -120.0000...  \n",
+       "..                                                 ...  \n",
+       "172  POLYGON ((18.82982 45.90887, 18.82984 45.90888...  \n",
+       "173  POLYGON ((20.07070 42.58863, 19.80161 42.50009...  \n",
+       "174  POLYGON ((20.59025 41.85541, 20.52295 42.21787...  \n",
+       "175  POLYGON ((-61.68000 10.76000, -61.10500 10.890...  \n",
+       "176  POLYGON ((30.83385 3.50917, 29.95350 4.17370, ...  \n",
+       "\n",
+       "[177 rows x 6 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "data = geopandas.read_file(geopandas.datasets.get_path('naturalearth_lowres'))\n",
     "display(data)"
@@ -32,8 +199,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d9ea2e05",
+   "execution_count": 17,
+   "id": "20ea9556",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5d4178a0",
+   "execution_count": 18,
+   "id": "19d5a1f5",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +219,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -74,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66b88184",
+   "id": "dc28b678",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -82,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94d2f8a4",
+   "id": "fe034a61",
    "metadata": {},
    "outputs": [],
    "source": []
