changed an error

--- a/EX_09_DATA_WRANGLING/EX_09_DATA_WRANGLING.ipynb
+++ b/EX_09_DATA_WRANGLING/EX_09_DATA_WRANGLING.ipynb
@@ -577,7 +577,7 @@
     "\n",
     "    df_melt_model = pd.melt(frame=df,value_vars=\"model name\",id_vars=[\"vendor name\"])\n",
     "    df_melt_mean = pd.melt(frame=df_mean_myct,value_vars='Mean',id_vars=['vendor name'])\n",
-    "    df_melt_median = pd.melt(frame=df_median_myct,value_vars='Mean',id_vars=['vendor name'])\n",
+    "    df_melt_median = pd.melt(frame=df_median_myct,value_vars='Median',id_vars=['vendor name'])\n",
     "\n",
     "    final_df = pd.concat([df_melt_model,df_melt_mean,df_melt_median],ignore_index=True)\n",
     "    return final_df"
